<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.Drifty</groupId>
    <artifactId>Drifty</artifactId>
    <version>2.0.0</version>
    <name>Drifty</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
        <javafx.version>20</javafx.version>
        <gluonfx-maven-plugin.version>1.0.19</gluonfx-maven-plugin.version>
        <native-maven-plugin.version>0.9.23</native-maven-plugin.version>
        <guiMain>GUI.Launcher</guiMain>
        <cliMain>CLI.Drifty_CLI</cliMain>
        <package.type/>
        <mac.app.store/>
        <resources/>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.1</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.10.0</version>
        </dependency>
        <dependency>
            <groupId>org.buildobjects</groupId>
            <artifactId>jproc</artifactId>
            <version>2.8.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--Maven Compiler Plugin-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>20</source>
                    <target>20</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>${guiMain}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx-maven-plugin.version}</version>
                <configuration>
                    <mainClass>${guiMain}</mainClass>
                    <nativeImageArgs>
                        <arg>--enable-url-protocols=https</arg>
                        <arg>--enable-url-protocols=http</arg>
                        <arg>--no-fallback</arg>
                        <arg>--verbose</arg>
                        <arg>${resources}</arg>
                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                    </nativeImageArgs>
                    <appIdentifier>${guiMain}</appIdentifier>
                    <releaseConfiguration>
                        <vendor>Drifty</vendor>
                        <description>Drifty is an open-source interactive file downloader system</description>
                        <packageType>${package.type}</packageType>
                        <!-- for macOS/iOS -->
                        <macAppStore>${mac.app.store}</macAppStore>
                        <bundleShortVersion>${project.version}</bundleShortVersion>
                        <bundleVersion>${project.version}</bundleVersion>
                    </releaseConfiguration>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>build-drifty-cli-for-windows-latest</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <configuration>
                                    <outputDirectory>target/CLI/windows</outputDirectory>
                                    <buildArgs>
                                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-windows.json</arg>
                                    </buildArgs>
                                </configuration>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>build-drifty-cli-for-ubuntu-latest</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <configuration>
                                    <outputDirectory>target/CLI/linux</outputDirectory>
                                    <buildArgs>
                                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-linux.json</arg>
                                    </buildArgs>
                                </configuration>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>build-drifty-cli-for-macos-latest</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native-maven-plugin.version}</version>
                        <extensions>true</extensions>
                        <configuration>
                            <imageName>Drifty CLI</imageName>
                            <mainClass>${cliMain}</mainClass>
                            <buildArgs>
                                <buildArg>--enable-url-protocols=https</buildArg>
                                <buildArg>--enable-url-protocols=http</buildArg>
                                <buildArg>--no-fallback</buildArg>
                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                <buildArg>--verbose</buildArg>
                            </buildArgs>
                        </configuration>
                        <executions>
                            <execution>
                                <id>build</id>
                                <configuration>
                                    <outputDirectory>target/CLI/mac</outputDirectory>
                                    <buildArgs>
                                        <arg>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-mac.json</arg>
                                    </buildArgs>
                                </configuration>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>build-drifty-gui-for-macos-latest</id>
            <properties>
                <package.type>pkg</package.type>
                <resources>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-mac.json</resources>
                <mac.app.store>true</mac.app.store>
            </properties>
        </profile>
        <profile>
            <id>build-drifty-gui-for-ubuntu-latest</id>
            <properties>
                <resources>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-linux.json</resources>
            </properties>
        </profile>
        <profile>
            <id>build-drifty-gui-for-windows-latest</id>
            <properties>
                <package.type>msi</package.type>
                <resources>-H:ResourceConfigurationFiles=${pom.basedir}/config/resource-config-windows.json</resources>
            </properties>
        </profile>
    </profiles>
</project>